# d2-loader

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
src/: fina_reader.rs  gbk.rs  lib.rs  stock_reader.rs
