[package]
name = "d2_loader"
version = "0.1.0"
edition = "2021"

[lib]
name = "d2_loader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
encoding_rs = "0.8"
csv = "1.3"
rayon = "1.10"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
futures = "0.3"
arrow = { version = "55", features = ["ipc"] }
chrono = "0.4"
